<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_university_list">UniversityList</string>
    <string name="title_activity_details">Details</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="STUDY_ABROAD">GRADUATE APPLICATION TRACKER</string>
    <string name="desc">statue of liberty</string>
    <string name="process">Process</string>
    <string name="university_list">Uni list</string>
    <string name="tracker">Track it</string>
    <string name="about">About</string>
    <string name="button_add_univ">Add</string>
    <string name="title_activity_add_univ">Add a University</string>
    <string name="title_activity_edit_univ">Edit University Details</string>
    <string name="title_activity_task_list">Task List</string>
    <string name="edit_text_uname">Enter University Name</string>
    <string name="edit_text_appfee">Application Fee</string>
    <string name="edit_text_setdate">Set Date</string>
    <string name="edit_text_username">Enter username of application</string>
    <string name="edit_text_passwd">Enter password</string>
    <string name="pick_date">Pick Date</string>
    <string name="num_lors">Number of LoRs</string>
    <string name="num_transcripts">Number of Transcripts</string>
    <string name="lor">Letters of Recommendation (LORs)</string>
    <string name="sop">Statement of Purpose (SOP)</string>
    <string name="publications">Scanned copies of awards/\n\tpublications</string>
    <string name="transcript">Transcripts - Academic portfolio</string>
    <string name="resume">Resume</string>
    <string name="name">com.example.providers.UniversityProvider</string>
    <string name="add">Add University</string>
    <string name="button_edit">Save Changes</string>
    <string name="Fee">Application Fee</string>
    <string name="heading">#000066</string>
    <string name="Date">Deadline</string>
    <string name="lors">#LORs</string>
    <string name="transcripts">#Transcripts</string>
    <string name="details_username">Username of application</string>
    <string name="details_passwd">Password</string>
    <string name="online">Online Application</string>
    <string name="Gre">Sent GRE Score?</string>
    <string name="Toefl">Sent  Toefl Score?</string>
    <string name="Financial_documents">Financial Documents</string>
    <string name="Application_Fee">Paid application fee?</string>
    <string name="graduate">Graduate hat</string>
    <string name="sky">SKY Background</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_track_it">TrackIt</string>
    <string name="addToTrack">Track</string>
    <string name="table_uniName">Name</string>
    <string name="table_online">Online</string>
    <string name="table_aid">Applied for aid?</string>
    <string name="trackit_aid">Aid</string>
    <string name="table_gre">GRE Score</string>
    <string name="table_toefl">Toefl Score</string>
    <string name="table_lor">Lor</string>
    <string name="table_admit">Admit</string>
    <string name="title_activity_process">Process</string>
    <string name="about_title">About MS Application Tracker</string>
    <string name="ok_message">OK!</string>
    <string name="about_message">Use this app to organize your MS 
	    						Application process.\n\n
	    						<b>1.Process:</b>\n
	    						-Familiarise yourself with all that has to be done to pursue your masters degree abroad.\n\n
	    						<b>2.Uni list:</b> \n
	    						-Add the list of universities you\'re going to apply to.\n
	    						-Click on each university name to view its details, recommenders\' info, and predefined checklists of the documents required and post application tasks to be completed.\n
	    						-Long click university name(s) to edit university details (or) delete universities.\n\n
	    						<b>3.Tracker:</b>\n
	    						-Use this tool to view the statuses of all universities at once, to keep a track on how much of the application process is complete.\n
	    						-Column 1 (Online) indicates whether the online application is complete and whether the application fee has been paid.\n
	    						-Column 2 (Aid?) indicates whether you\'ve applied for aid.\n
	    						-Column 3 and 4 indicate if you\'ve sent official gre and toefl scores\n
	    						-Column 5(Lor) indicates if all your recommenders have submitted their letters\n
	    						-Column 6(Admit)indicates if you\'ve been admitted.\n
	    						</string>
    <string name="editRecos">Edit Recommender Details</string>
    <string name="profName">Recommender name</string>
    <string name="initials">Initials</string>
    <string name="step1"> PHASE 1:\n\n Information research about universities- through Websites and brochures \n\n\n*Scroll right to learn more*</string>
    <string name="step2"> PHASE 2:\n\n Take the GRE/TOEFL test </string>
    <string name="step3"> PHASE 3:\n\n Shortlist universitites based on your area of interest, cost, availabaility of aid, university facilities and location  </string>
    <string name="step4"> PHASE 4:\n\n Prepare your Statement of purpose and resume. A statement of purpose (SoP) is a concise essay about one\'s career goals, identified means to achieve them and accomplishments so far towards those goals. Apply for transcripts from universities attended. Approach professors/internship supervisors/employers for letters of recommendation. </string>
    <string name="step5"> PHASE 5:\n\n Complete online applications of the universities shortlisted.  </string>
    <string name="step6"> PHASE 6:\n\n University sends I20 after admit.  </string>
    <string name="step7"> PHASE 7:\n\n Apply for visa </string>
    <string name="step8"> PHASE 8:\n\n Prepare for departure. There are a lot of websites that help you prepare a list of necessary things to pack. </string>
    <string name="step9"> PHASE 9:\n\n  Courses commence. Well done!</string>
    <string name="title_activity_name">University Name</string>
    <string name="title_activity_recos">Recos</string>
    <string name="title_activity_reco_page">RecoPage</string>
    

</resources>
