<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/tableLayout"
     android:stretchColumns="*"
	 tools:context=".TrackIt" >
    
    <TableRow
        android:layout_height="wrap_content"
    	android:id="@+id/tableRow"
    	android:layout_marginTop="20dip"
    	
    	>
    	
        <TextView
            android:text="@string/table_uniName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/table_online"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/table_aid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/table_gre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/table_toefl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/table_lor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/table_admit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        
        
    </TableRow>
</TableLayout>