<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PostApp"
    android:layout_width="fill_parent" 
	android:layout_height="fill_parent" >
	<ImageView 
		android:src="@drawable/sky"
	    android:gravity="fill" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scaleType="fitXY"
		android:contentDescription="@string/sky"/>
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


        <CheckBox
            android:id="@+id/checkBox_pa1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online"
            android:layout_marginTop="25sp" />

        <CheckBox
            android:id="@+id/checkBox_pa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gre" 
            android:layout_marginTop="25sp"/>

        <CheckBox
            android:id="@+id/checkBox_pa3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Toefl"
            android:layout_marginTop="25sp" />

        <CheckBox
            android:id="@+id/checkBox_pa4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Financial_documents"
            android:layout_marginTop="25sp" />
        <CheckBox
            android:id="@+id/checkBox_pa5"
            android:text="@string/Application_Fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
          
           />

    

</LinearLayout>
</FrameLayout>