<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="fill_parent" 
	android:layout_height="fill_parent" >
	
	<ImageView 
		android:src="@drawable/statue_of_liberty"
	    android:layout_gravity="fill" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:contentDescription="@string/desc"
		android:scaleType="fitXY">
	</ImageView>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:orientation="vertical"
		>    
		<TextView
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:layout_gravity="top|center_vertical"
		    android:layout_marginLeft="50sp"
		    android:textSize="15sp"
		    android:layout_marginTop="2sp"
		    android:text="@string/STUDY_ABROAD"
		    android:textStyle="italic|bold"
		    />
		<RelativeLayout
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_marginTop="50dp"
	    >
		    	 <Button
		        android:id="@+id/process"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/process"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="25dp"	
		        android:textStyle="italic" />
		    	 
		   	    <Button
		        android:id="@+id/university_list"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@string/university_list"
		        android:layout_marginRight="25dp"
		        android:textStyle="italic" 
		        />
		</RelativeLayout>
		<RelativeLayout 
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_marginTop="50dp"
	    
	    >
	    
			 <Button
		        android:id="@+id/tracker"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tracker"
		        android:layout_alignParentLeft="true"
		        android:layout_marginLeft="25dp"	
		        android:textStyle="italic" />
		    <Button
		        android:id="@+id/about"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/about"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="25dp"
		        android:textStyle="italic" />
		</RelativeLayout>

	   

	</LinearLayout>
</FrameLayout>
