<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Details"
    android:layout_width="fill_parent" 
	android:layout_height="fill_parent" >
	<ImageView 
		android:src="@drawable/sky"
	    android:gravity="fill" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scaleType="fitXY"
		android:contentDescription="@string/sky"/>

    <ScrollView
        android:id="@+id/scrollView_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30sp">
  
    	<TextView
        android:id="@+id/university_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:maxLines="5"
        android:textColor="#524e86"
        android:textSize="30sp"
        />
        
   
    <TextView
        android:id="@+id/Fee"
         android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fee"
        android:textColor="#524e86"
        android:textStyle="bold" />

  	   <TextView 
  	       
  	       android:id="@+id/Fee_value"
  	       android:layout_height="wrap_content"
  	       android:layout_width="wrap_content"
  	       />
  	  

  	   <TextView
  	       android:id="@+id/Date"
  	        android:layout_marginTop="10dp"
  	       android:layout_width="wrap_content"
  	       android:layout_height="wrap_content"
  	       android:text="@string/Date"
  	       android:textColor="#524e86"
  	       android:textStyle="bold" />

  	   <TextView 
  	       
  	       android:id="@+id/Date_value"
  	       android:layout_height="wrap_content"
  	       android:layout_width="wrap_content"
  	       />
  	  
  	    <TextView
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:text="@string/lors"
  	         android:layout_marginTop="10dp"
  	        android:textColor="#524e86"
  	        android:textStyle="bold" />

  	   <TextView 
  	      
  	       android:id="@+id/lors_value"
  	       android:layout_height="wrap_content"
  	       android:layout_width="wrap_content"
  	       />
  	 
     
  	   	 <TextView
  	   	     android:layout_width="wrap_content"
  	   	     android:layout_height="wrap_content"
  	   	      android:layout_marginTop="10dp"
  	   	     android:text="@string/transcripts"
  	   	     android:textColor="#524e86"
  	   	     android:textStyle="bold" />

  	   <TextView 
  	       android:id="@+id/transcripts_value"
  	       android:layout_height="wrap_content"
  	       android:layout_width="wrap_content"
  	       />
  	   
  	   <TextView
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:text="@string/details_username"
  	         android:layout_marginTop="10dp"
  	        android:textColor="#524e86"
  	        android:textStyle="bold" />

  	   <TextView 
  	      
  	       android:id="@+id/username_value"
  	       android:layout_height="wrap_content"
  	       android:layout_width="wrap_content"
  	       />
  	   
  	   <TextView
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:text="@string/details_passwd"
  	         android:layout_marginTop="10dp"
  	        android:textColor="#524e86"
  	        android:textStyle="bold" />

  	   <TextView 
  	      
  	       android:id="@+id/password_value"
  	       android:layout_height="wrap_content"
  	       android:layout_width="wrap_content"
  	       />
  	   
  
		</LinearLayout>
	</ScrollView>
</FrameLayout>